feat: 添加获取交易日功能，优化数据质量服务，增强异常检测和数据缺口查找逻辑